# cpp_avl_igvc

./: .gitignore  CLAUDE.md  HISTORY.md  README.md
firmware/igvc_motor_firmware/: platformio.ini
firmware/igvc_motor_firmware/src/: main.cpp  main_dutycycle.cpp.bak
src/igvc_control/: CMakeLists.txt  igvc_control.xml  package.xml
src/igvc_control/config/: controllers.yaml  igvc.urdf.xacro
src/igvc_control/include/igvc_control/: igvc_hardware.hpp
src/igvc_control/launch/: control.launch.py
src/igvc_control/src/: igvc_hardware.cpp
src/igvc_nav/: CMakeLists.txt  package.xml
src/igvc_nav/config/: bridge_params.yaml  nav2_params.yaml
src/igvc_nav/launch/: bridge_only.launch.py  nav.launch.py
src/igvc_nav/src/: cmd_vel_bridge.cpp
src/igvc_raw_control_old/: CMakeLists.txt  package.xml
src/igvc_raw_control_old/config/: serial_bridge_params.yaml
src/igvc_raw_control_old/launch/: serial_bridge.launch.py
src/igvc_raw_control_old/src/: serial_bridge.cpp
src/igvc_teleop/: CMakeLists.txt  package.xml
src/igvc_teleop/config/: teleop_params.yaml
src/igvc_teleop/launch/: teleop.launch.py
src/igvc_teleop/src/: teleop_node.cpp
