<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>igvc_raw_control_old</name>
  <version>0.1.0</version>
  <description>AVL IGVC 2026 — OLD open-loop serial bridge (replaced by igvc_control)</description>
  <maintainer email="you@example.com">AVL Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
